# FEDIff

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  project.prm
examples/2D_IAEA/: input.geom_2g copy.xml  input.geom_2g.xml  input.mat_2g copy.xml  input.mat_2g.xml  project.prm
examples/2D_MOX/: mox.geom.xml  mox.mat.xml  project.prm
examples/BIBLIS/: biblis.geom.xml  biblis.mat.xml
examples/C5G7/: input.geom_asmbly.xml  input.geom_pin.xml  project.prm
include/: create_geom.h  input_geom.h  input_mat.h  materials.h  prob_geom.h.txt  static_diffusion copy.h  static_diffusion.h
src/: create_geom.cc  fediff.cc  input_geom.cc  input_mat.cc  materials.cc  prob_geom.cc.txt  static_diffusion.cc  utils.cc
